# deacon

./: .coderabbit.yaml  .dockerignore  .gitattributes  .gitignore  .maverick-workspace.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLI_PARITY.md  CODEX_FINDINGS.md  CONSISTENCY.md  CONTRIBUTING.md  Cargo.toml  DEACON_TEST_PROMPT.md  EXAMPLES.md  FEATURE_INSTALLATION_SUMMARY.md  GEMINI.md  Makefile  README.md  REFACTOR.md  SECURITY.md  TEST_ANALYSIS.md  consumer-core-completion-prd.md  deny.toml  manifest  maverick.sh  maverick.yaml  test_config_loading.rs  test_security_merge.sh
.apm/: README.md
crates/conformance/: Cargo.toml
crates/conformance/src/: case_hash.rs  certify.rs  clause.rs  clause_diff.rs  coverage.rs  diff.rs  inventory.rs  lib.rs  load.rs  model.rs  report.rs  snapshot.rs  validate.rs
crates/conformance/src/prose/: mod.rs  normalize.rs  strength.rs
crates/conformance/src/schema/: extract.rs  mod.rs  resolve.rs
crates/conformance/tests/: allowed_difference_scoping.rs  applicability.rs  case_schema_valid.rs  classification_join.rs  clause_baseline.rs  clause_classification_join.rs  clause_determinism.rs  clause_diff.rs  clause_extraction.rs  disposition_rules.rs  gap_certification.rs  inventory_baseline.rs  inventory_determinism.rs  inventory_diff.rs  inventory_extraction.rs  load_real.rs  normalization_semantics.rs  registry_valid.rs  report_determinism.rs  seed_completeness.rs  snapshot_staleness.rs  traceability.rs  validation_classes.rs  waiver_expiry.rs
crates/core/: Cargo.toml
crates/core/src/: browser.rs  cache.rs  compose.rs  config.rs  container.rs  container_env_probe.rs  container_lifecycle.rs  docker.rs  docker_retry.rs  docker_user_mapper.rs  dockerfile_generator.rs  dockerfile_utils.rs  doctor.rs  dotfiles.rs  entrypoint.rs  env_probe.rs  errors.rs  feature_installer.rs  feature_ref.rs  features.rs  features_info.rs  gpu.rs  host_requirements.rs  io.rs  jsonc.rs  lib.rs  lifecycle.rs  lockfile.rs  logging.rs  mount.rs  observability.rs  oci.rs  oci.rs.old  outdated.rs  platform.rs  plugins.rs  ports.rs  progress.rs  redaction.rs  registry_parser.rs  (+13 more)
crates/core/src/cache/: disk.rs  keys.rs  memory.rs  multilevel.rs
crates/core/src/features_test/: discovery.rs  errors.rs  mod.rs  model.rs  runner.rs
crates/core/src/host_ca/: activation.rs  discover.rs  env.rs  inject.rs  mod.rs
crates/core/src/logging/: mod.rs  redaction_layer.rs
crates/core/src/oci/: auth.rs  client.rs  fetcher.rs  mod.rs  types.rs  utils.rs
crates/core/src/port_forward/: daemon.rs  detect.rs  mod.rs  registry.rs  relay.rs
crates/core/src/text/: boxing.rs  mod.rs
crates/core/tests/: canonical_id.rs  features_info_models.rs  features_test_discovery.rs  features_test_paths.rs  features_test_scenarios.rs  integration_compose.rs  integration_config.rs  integration_container_lifecycle.rs  integration_entrypoint_compose.rs  integration_env_probe.rs  integration_env_probe_cache.rs  integration_env_probe_env_capture.rs  integration_env_probe_remote.rs  integration_env_probe_user.rs  integration_extends.rs  integration_fake_registry.rs  integration_feature_dependencies.rs  integration_feature_installation.rs  integration_features.rs  integration_gpu_detection.rs  integration_json_logging.rs  integration_layered_merge.rs  integration_lifecycle.rs  integration_lockfile.rs  integration_logging.rs  integration_mock_runtime.rs  integration_mount.rs  integration_non_blocking_lifecycle.rs  integration_oci.rs  integration_oci_auth.rs  integration_oci_enhancements.rs  integration_override_secrets.rs  integration_parallel_feature_installation.rs  integration_per_command_events.rs  integration_ports.rs  integration_redaction.rs  integration_security.rs  integration_spans.rs  integration_templates.rs  integration_user_mapping.rs  (+8 more)
crates/core/tests/common/: mod.rs
crates/deacon/: Cargo.toml
crates/deacon/.deacon/cache/: audit.jsonl
crates/deacon/benches/: benchmark.rs
crates/deacon/examples/: basic.rs
crates/deacon/src/: cli.rs  lib.rs  logging.rs  main.rs  runtime_utils.rs
crates/deacon/src/commands/: build.rs  config.rs  down.rs  exec.rs  features.rs  features_monolith.rs  features_publish_output.rs  forward_daemon.rs  mod.rs  outdated.rs  read_configuration.rs  run_user_commands.rs  set_up.rs  templates.rs  up.rs  upgrade.rs
crates/deacon/src/ui/: build_progress.rs  build_render.rs  lifecycle_summary.rs  mod.rs  spinner.rs
crates/deacon/tests/: build_consistency.rs  cli_flags_features_info.rs  consistency_env_probe_flag.rs  consistency_remote_env_flags.rs  exec_id_label_cli.rs  integration_auto_forward.rs  integration_build.rs  integration_build_args.rs  integration_build_output.rs  integration_cli.rs  integration_compose_config_mounts.rs  integration_compose_enhancements.rs  integration_compose_features_build.rs  integration_custom_container_name.rs  integration_doctor.rs  integration_down.rs  integration_e2e.rs  integration_exec.rs  integration_exec_container_state.rs  integration_exec_env.rs  integration_exec_id_label.rs  integration_exec_pty.rs  integration_exec_selection.rs  integration_feature_entrypoints.rs  integration_feature_lifecycle.rs  integration_feature_mounts.rs  integration_feature_security.rs  integration_features_info_auth.rs  integration_features_info_dependencies.rs  integration_features_info_local.rs  integration_features_info_manifest.rs  integration_features_info_tags.rs  integration_features_info_verbose.rs  integration_features_package.rs  integration_features_publish.rs  integration_features_test_json.rs  integration_hello.rs  integration_host_ca_build.rs  integration_host_ca_runtime.rs  integration_host_requirements.rs  (+89 more)
crates/deacon/tests/corpus_runner/: mod.rs
crates/parity-harness/: Cargo.toml
crates/parity-harness/src/: aggregate.rs  compare.rs  evidence.rs  exec.rs  lib.rs  normalize.rs  oracle.rs  oracle_type.rs  prereq.rs  registry.rs  report.rs  runner.rs  waiver.rs  workspace.rs
crates/parity-harness/tests/: aggregator.rs  docker_channels.rs  normalize_consistency.rs  raw_outputs.rs  runner_record_replay.rs
(+1623 files in other folders)
