[package]
name = "deacon-core"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Core library for deacon — DevContainer configuration resolution, OCI feature/template fetching, container runtime abstraction (Docker/Podman), lifecycle execution, and lockfile management."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
jsonc-parser = { version = "0.32", default-features = false, features = ["preserve_order"] }
regex = "1.0"
tokio = { version = "1.0", features = ["rt", "process", "macros", "io-util", "io-std", "fs"] }
once_cell.workspace = true
# Use rustls for a pure-Rust TLS stack to simplify cross-compilation (musl, aarch64) and avoid OpenSSL toolchain requirements.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tar = "0.4"
sha2 = "0.10"
bytes = "1.0"
async-trait = "0.1"
linked-hash-map = "0.5"
indexmap = { version = "2.0", features = ["serde"] }
shell-words.workspace = true
chrono = { version = "0.4", features = ["serde"] }
postcard = { version = "1", default-features = false, features = ["alloc"] }
zip = "2.1"
fastrand = "2.3.0"
base64 = "0.22"
sysinfo = "0.39"
num_cpus = "1.0"
directories-next = "2.0"
bytesize = "2.0.1"
semver = "1.0"
blake3 = "1"
futures = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.12"
assert_cmd = "2.0"
tokio-test = "0.4"
wiremock = "0.6"
testcontainers = "0.27"

[lints]
workspace = true
