[package]
name = "deacon-core"
version = "0.2.0-rc.10"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
publish = false
description = "Core library for deacon — DevContainer configuration resolution, OCI feature/template fetching, container runtime abstraction (Docker/Podman), lifecycle execution, and lockfile management."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonc-parser = { version = "0.32", default-features = false, features = ["preserve_order"] }
regex.workspace = true
tokio.workspace = true
once_cell.workspace = true
# Use rustls for a pure-Rust TLS stack to simplify cross-compilation (musl, aarch64) and avoid OpenSSL toolchain requirements.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tar.workspace = true
sha2.workspace = true
bytes = "1.0"
async-trait = "0.1"
linked-hash-map = "0.5"
indexmap = { version = "2.0", features = ["serde"] }
shell-words.workspace = true
chrono = { version = "0.4", features = ["serde"] }
postcard = { version = "1", default-features = false, features = ["alloc"] }
zip = "2.1"
fastrand = "2.3.0"
base64 = "0.22"
sysinfo = "0.39"
num_cpus = "1.0"
directories-next = "2.0"
bytesize = "2.0.1"
semver = "1.0"
blake3 = "1"
futures = "0.3"
# Advisory file locking for the host-global port-forward registry (cross-platform API).
fs2.workspace = true
# Host-CA support (016): enumerate the OS trust store (pure-Rust, no aws-lc-rs —
# preserves the ring-based pure-Rust TLS posture, see the reqwest 0.13/aws-lc-rs
# memory note), parse DER certs for BasicConstraints/Subject/SPKI, and match the
# corporate delta against Mozilla's bundled public roots by SPKI SHA-256.
rustls-native-certs = "0.8"
x509-parser = "0.18"
webpki-roots = "1"
# `--iidfile` temp files for capturing the built image digest (docker.rs::build_image).
tempfile.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
# Safe wrappers for setsid/kill/Pid used by the Unix forwarder daemon.
nix.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
tokio-test = "0.4"
wiremock = "0.6"
testcontainers = "0.27"
temp-env.workspace = true

[lints]
workspace = true
