[package]
name = "deacon"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Rust implementation of the Development Containers CLI (containers.dev). Consumer-side commands: up, down, exec, build, read-configuration, run-user-commands, set-up, upgrade, templates apply, doctor."
readme = "../../README.md"

[features]
default = ["full"]
# Full CLI with all subcommands (build, features, templates, doctor, outdated, etc.)
full = []
# MVP: only up, exec, down, read-configuration subcommands

[dependencies]
deacon-core.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "fs", "io-std", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tempfile = "3.12"
sha2 = "0.10"
tar = "0.4"
flate2 = "1"
shell-words.workspace = true
indicatif = "0.18"
console = "0.16"
futures = "0.3"
regex = "1.10"

[lints]
workspace = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.12"
zip = "2.4"
serde_json = { version = "1.0", features = ["preserve_order"] }
testcontainers = "0.27"
