[package]
name = "deacon"
version = "0.2.0-rc.9"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
publish = false
description = "Rust implementation of the Development Containers CLI (containers.dev). Consumer-side commands: up, down, exec, build, read-configuration, run-user-commands, set-up, upgrade, templates apply, doctor."
readme = "../../README.md"

[dependencies]
deacon-core.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
sha2.workspace = true
tar.workspace = true
flate2 = "1"
shell-words.workspace = true
indicatif = "0.18"
console = "0.16"
futures.workspace = true
regex.workspace = true

[lints]
workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates = "3.1"
zip.workspace = true
serde_json.workspace = true
testcontainers.workspace = true
temp-env.workspace = true
