[package]
name = "parity-harness"
version = "0.0.0"
edition = "2024"
rust-version.workspace = true
license.workspace = true
publish = false
description = "Dev-only support crate for the deacon parity test harness: oracle resolution + exact-version verification, bounded CLI execution with raw capture, the single normalization module, waiver/registry loaders, and run-report fragments. Never published."

[dependencies]
# The conformance registry owns the single waiver record schema + loader
# (019-conformance-registry, research D3). `parity-harness::waiver` is a thin
# query wrapper over records this crate loads from `conformance/registry/waivers/`.
deacon-conformance = { path = "../conformance" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
# RFC3339 report timestamps. Not a [workspace.dependencies] entry (only used by
# deacon-core today), so pinned directly here; `clock` (default) provides Utc::now.
chrono = "0.4"
# NEW dev-scope dependency: parses `.config/nextest.toml` in the registry check
# (registry.rs / parity_registry_check) so profile-filter drift fails structurally.
toml = "1.1"
# Declarative conformance runner (022): the `matches` stdout/stderr assertion is a
# regex match; `regex` is already a [workspace.dependencies] entry (used by core).
regex = { workspace = true }
# Isolated external temp workspaces for Docker-backed conformance cases (022 US5,
# workspace.rs). Runtime dep now (not just dev): the RAII cleanup guard owns a TempDir.
tempfile = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
